# badge-readme

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_MIGRATION.md  SECURITY.md  action.yml  credly.py  docker-compose.yml  githubRepo.py  main.py  pyproject.toml  requirements.txt  settings.py  setup_chrome.sh  test_chromedriver.py  update-badges.yml
git/: githubRepo.py
services/: acclaim.py  credly.py  githubRepo.py
tests/: .env.tests  Dockerfile  docker-compose.yml  tests.py
tests/html/: happy_day.html  no_badges.html
tests/markdowns/: no_changes_happy_day.md  no_tags.md  with_tags_no_text_between.md  with_tags_text_between.md
