[project]
name = "badge-readme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "h11>=0.16.0",
    "lxml>=6.0.2",
    "pygithub>=2.8.1",
    "requests>=2.32.4",
    "selenium>=4.15.1",
    "urllib3>=2.5.0",
    "webdriver-manager>=4.0.2",
    "zipp>=3.19.1",
]
